--- a/style.css
+++ b/style.css
@@ -1,4 +1,12 @@
 h1 {
-  font-size: 100px;
+  font-size: 50px;
+  font-family: Cursive;
+}
+h2 {
+  font-size: 50px;
+  font-family: Cursive;
+}
+h3 {
+  font-size: 50px;
   font-family: Cursive;
 }
